Update about section with software engineering background and 10 years experience

--- a/index.html
+++ b/index.html
@@ -110,14 +110,20 @@
                 <div class="about-text">
                     <h2 class="section-title">Why Trust My Advice?</h2>
                     <p>
-                        I've spent countless hours watching tech reviews, reading specifications, and staying up-to-date 
-                        with the latest technology trends. Instead of keeping this knowledge to myself, I want to help 
-                        others make informed decisions without the overwhelm of endless research.
+                        As a software engineer with 10 years of experience, I live and breathe technology. My professional 
+                        background gives me deep insight into how hardware and software work together, what really matters 
+                        for performance, and how to get the best value for your money.
+                    </p>
+                    <p>
+                        Beyond my professional expertise, I've spent countless hours watching tech reviews, reading 
+                        specifications, and staying up-to-date with the latest technology trends. Instead of keeping 
+                        this knowledge to myself, I want to help others make informed decisions without the overwhelm 
+                        of endless research.
                     </p>
                     <p>
                         My advice is always honest, unbiased, and tailored to your specific needs and budget. 
-                        I don't sell anything - just provide genuine recommendations based on thorough research 
-                        and real-world experience.
+                        I don't sell anything - just provide genuine recommendations based on thorough research, 
+                        real-world experience, and professional technical knowledge.
                     </p>
                     <div class="about-features">
                         <div class="feature">
