Add Ireland location and Irish/UK market focus information

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <p class="hero-description">
                     Confused about which phone to buy? Need help building a PC? Looking for the perfect laptop? 
                     Get personalized technology recommendations based on years of research and real-world experience.
+                    <strong>Based in Ireland</strong> with expertise in UK & Irish markets.
                 </p>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn btn-primary">Get Free Advice</a>
@@ -126,6 +127,12 @@
                         I don't sell anything - just provide genuine recommendations based on thorough research, 
                         real-world experience, and professional technical knowledge.
                     </p>
+                    <p>
+                        <strong>🇮🇪 Based in Ireland</strong>, I specialize in providing advice for the Irish and UK markets, 
+                        understanding local pricing, availability, retailers, and warranty considerations. Whether you're 
+                        shopping from Currys PC World, Amazon UK, Komplett, or local Irish retailers, I know where 
+                        to find the best deals and what to watch out for.
+                    </p>
                     <div class="about-features">
                         <div class="feature">
                             <i class="fas fa-check-circle"></i>
@@ -158,6 +165,7 @@
             <h2 class="section-title">Get Your Free Tech Advice</h2>
             <p class="section-description">
                 Tell me about your needs, budget, and preferences. I'll get back to you with personalized recommendations.
+                <br><small><strong>Note:</strong> Advice tailored for Irish & UK markets with local pricing and availability.</small>
             </p>
             
             <form class="contact-form" id="contactForm">
@@ -189,7 +197,7 @@
                 <div class="form-row">
                     <div class="form-group">
                         <label for="budget">Budget Range</label>
-                        <input type="text" id="budget" name="budget" placeholder="e.g., $500-800, flexible, etc.">
+                        <input type="text" id="budget" name="budget" placeholder="e.g., 500-800, flexible, etc.">
                     </div>
                     <div class="form-group">
                         <label for="timeline">When do you need this?</label>
@@ -223,13 +231,13 @@
                 <h3>Enjoying the free advice?</h3>
                 <p>This service is completely free, but if you'd like to support my work, donations are appreciated!</p>
                 <div class="support-options">
-                    <a href="#" class="support-btn" id="revolut-btn">
+                    <a href="revolut.me/calumod21" class="support-btn" id="revolut-btn">
                         <i class="fas fa-credit-card"></i>
-                        Revolut: @your-tag
+                        Revolut: @calumod21
                     </a>
-                    <a href="#" class="support-btn" id="donation-btn">
+                    <a href="ko-fi.com/calumod21" class="support-btn" id="donation-btn">
                         <i class="fas fa-heart"></i>
-                        Donation Platform
+                        Ko-Fi
                     </a>
                 </div>
             </div>
@@ -244,7 +252,8 @@
                     <i class="fas fa-microchip"></i>
                     <span>Tech Advice Hub</span>
                 </div>
-                <p>&copy; 2024 Tech Advice Hub. Free technology guidance for everyone.</p>
+                <p>&copy; 2024 Tech Advice Hub. Free technology guidance for everyone.<br>
+                <small>Based in Ireland 🇮🇪 | Serving Irish & UK markets</small></p>
             </div>
         </div>
     </footer>
