Update support buttons to open real links in new tabs instead of dialogs

--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
                 <h3>Enjoying the free advice?</h3>
                 <p>This service is completely free, but if you'd like to support my work, donations are appreciated!</p>
                 <div class="support-options">
-                    <a href="revolut.me/calumod21" class="support-btn" id="revolut-btn">
+                    <a href="https://revolut.me/calumod21" class="support-btn" id="revolut-btn" target="_blank" rel="noopener noreferrer">
                         <i class="fas fa-credit-card"></i>
                         Revolut: @calumod21
                     </a>
-                    <a href="ko-fi.com/calumod21" class="support-btn" id="donation-btn">
+                    <a href="https://ko-fi.com/calumod21" class="support-btn" id="donation-btn" target="_blank" rel="noopener noreferrer">
                         <i class="fas fa-heart"></i>
                         Ko-Fi
                     </a>
